[package]
name = "src-sqlx-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
src-domain = { version = "0.1.0", path = "../src-domain" }

[dev-dependencies]
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["full"] }
